# fadegoblin

./: .gitignore  JustFile  README.md  main.py  pyproject.toml  todays_picks.json
.github/workflow/: afternoon_sniper.yml  daily_picks.yml  morning_degen.yml
.github/workflows/: afternoon_sniper.yml  morning_degen.yml
src/: config.py  ev_logic.py  generator.py  image.py  llm.py  main.py  odds.py  prompts.py
src/fadegoblin/: betting.py  browser_twitter.py  card.py  config.py  ev_logic.py  generator.py  image.py  llm.py  main.py  odds.py  prompts.py  twitter.py
