[project]
name = "fadegoblin"
version = "0.2.0"
description = "A Bluesky bot that posts unhinged sports betting parlays."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.65",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
]

[project.scripts]
bot = "src.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
